Commit
1] Cusotmer Manual Changes in progress